// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Playlist/Playlist.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy overlay"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      />
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        3 tracks
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Playlist/Playlist.tools.svelte: Single track 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy overlay"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      />
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        1 track
      </h4>
    </header>
  </span>
</div>
`;
